# robotic_surgery

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
config/: ros_user_ssh_key
crustcrawler_smart_arm/crustcrawler_smart_arm/: CMakeLists.txt
crustcrawler_smart_arm/smart_arm_controller/: CMakeLists.txt  package.xml
crustcrawler_smart_arm/smart_arm_controller/config/: smart_arm.yaml
crustcrawler_smart_arm/smart_arm_controller/launch/: smart_arm.launch
crustcrawler_smart_arm/smart_arm_controller/scripts/: make_cobra_pose.py
crustcrawler_smart_arm/smart_arm_description/: CMakeLists.txt
crustcrawler_smart_arm/smart_arm_kinematics/: CMakeLists.txt
docker/ros-hydro/: Dockerfile
msg_gen/cpp/include/k2_client/: Lean.h
msg_gen/lisp/: Appearance.lisp  _package_Lean.lisp
scripts/: launch_gui.sh  wait_port.sh
src/: Dockerfile  startAudio.cpp  startRGB.cpp
src/config/X11/: xorg-dummy.conf
src/config/autostart/: guicommand.desktop  terminal.desktop
src/config/ssh/: authorized_keys
src/crustcrawler_smart_arm/crustcrawler_smart_arm/: package.xml
src/crustcrawler_smart_arm/smart_arm_kinematics/: package.xml
src/k2_client/msg/: _Activities.py  _Appearance.py  _Audio.py  _Body.py  _JointOrientationAndType.py  __init__.py
src/robotic_surgery/: CMakeLists.txt  package.xml
src/ros/MoveIt/: .setup_assistant  CMakeLists.txt  package.xml
src/ros/MoveIt/config/: fake_controllers.yaml  (+2 more)
src/ros/crustcrawler_smart_arm/smart_arm_description/: package.xml
src/ros/crustcrawler_smart_arm/smart_arm_description/meshes/: arm_finger.stl  arm_shoulder_pan.stl  arm_wrist.stl
src/ros/crustcrawler_smart_arm/smart_arm_description/urdf/: smart_arm.xacro
src/ros/depth_view/: CMakeLists.txt  package.xml
src/ros/face_detection/: CMakeLists.txt  package.xml  setup.py
src/ros/face_detection_msgs/: CMakeLists.txt  README.md  package.xml
src/ros/k2_client/: CMakeLists.txt  README.md  manifest.xml  package.xml
src/ros/k2_client/include/k2_client/: k2_client.h
src/ros/k2_client/launch/: k2_client.launch
src/ros/k2_client/msg_gen/cpp/include/k2_client/: Activities.h  Appearance.h  Audio.h  Body.h  BodyArray.h  Expressions.h  JointOrientationAndType.h  JointPositionAndState.h
src/ros/k2_client/msg_gen/lisp/: Activities.lisp  Audio.lisp  Body.lisp  BodyArray.lisp  Expressions.lisp  JointOrientationAndType.lisp  JointPositionAndState.lisp  Lean.lisp  _package.lisp  _package_Activities.lisp  _package_Appearance.lisp  _package_Audio.lisp  _package_Body.lisp  _package_BodyArray.lisp  _package_Expressions.lisp  _package_JointOrientationAndType.lisp  _package_JointPositionAndState.lisp  k2_client-msg.asd
src/ros/k2_client/src/k2_client/: startBody.cpp  startDepth.cpp  startIR.cpp  startPointCloud.cpp
src/ros/k2_client/src/k2_client/msg/: _BodyArray.py  _Expressions.py  _JointPositionAndState.py  _Lean.py
src/ros/kinematics_smart/arm_moveit_generated/: .setup_assistant  CMakeLists.txt  Readme.md  package.xml
src/ros/kinematics_smart/arm_moveit_generated/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  smart_arm.srdf
src/ros/kinematics_smart/arm_moveit_generated/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kinematic_model_tutorial.launch  kmt_test.launch  motion_planning_api_tutorial.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/ros/kinematics_smart/arm_moveit_generated/src/: IK.cpp  kinematic_model_tutorial.cpp  kinematic_model_tutorial_tested.cpp  motion_planning_api_tutorial.cpp  pos_for_IK.py  ros_api_tutorial.cpp
src/ros/learningtf/: README.txt
src/ros/modified_arm/arm_modified/: .setup_assistant  CMakeLists.txt  Readme.md  package.xml
src/ros/modified_arm/arm_modified/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  smart_arm_static.srdf
src/ros/modified_arm/arm_modified/launch/: cobra_demo.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  integration.launch  inverse_test.launch  kinematic_model_tutorial.launch  kmt_test (copy).launch  kmt_test.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/ros/modified_arm/arm_modified/src/: IK_modified_arm.cpp  desired_pos.py  force_feedback.py  kinematic_model_tutorial_tested.cpp  make_cobra_pose.py  pos_for_IK.py
src/ros/moveit_initial/: .setup_assistant  CMakeLists.txt  package.xml
src/ros/point_detection/: CMakeLists.txt  README.md  package.xml  setup.py
src/ros/point_detection_msgs/: CMakeLists.txt  README.md  package.xml
src/ros/smart_arm_desc/: CMakeLists.txt  effector_desc.xacro  package.xml  robot_desc.xacro  smart_arm_desc.xacro  smart_arm_static_desc.xacro
src/ros/smart_arm_description/: CMakeLists.txt  arm_desc.xacro  package.xml
src/ros/stereo_vision/: camera_calibration.py  check_chessboard.py
src/ros/surface_analysis/: CMakeLists.txt  package.xml
src/ros/surgery_launch/: README.md  display_arm.launch
src/ros/tip2d_detection/: CMakeLists.txt  LICENSE.txt  README.md  package.xml  setup.py
src/ros/tip2d_detection_msgs/: CMakeLists.txt  README.md  package.xml
src/ros/tip3d_detection/: CMakeLists.txt  README.md  package.xml  setup.py
src/ros/tip3d_detection_msgs/: CMakeLists.txt  package.xml
src/ros/tip_detection/: CMakeLists.txt  package.xml  setup.py
src/ros/tip_detection_msgs/: CMakeLists.txt  package.xml
src/ros/tiptri_detection/: CMakeLists.txt  package.xml  setup.py
src/ros/tiptri_detection_msgs/: CMakeLists.txt  package.xml
src/surgery_launch/launch/: robot_demo.launch  surgery.launch
surgery_launch/: CMakeLists.txt  package.xml
(+240 files in other folders)
