<package>
  <name>smart_arm_controller</name>
  <version>0.1.0</version>
  <description>
    Crust Crawler AX-12+ Smart Arm controller that uses dynamixel_controllers for motor control.
  </description>
  <author>Arizona Robotics Research Group, University of Arizona</author>
  <author>Antons Rebguns</author>
  <maintainer email="rjw57@cam.ac.uk">Rich Wareham</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>dynamixel_motor</run_depend>
</package>

