<package>
  <name>robotic_surgery</name>
  <version>0.1.0</version>
  <description>
    A collection of packages used with the CUED robotic surgery Masters' project.
  </description>
  <author>Rich Wareham</author>
  <maintainer email="rjw57@cam.ac.uk">Rich Wareham</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/sigproc/robotic_surgery</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
