<package>
  <name>crustcrawler_smart_arm</name>
  <version>0.1.0</version>
  <description>
    crustcrawler_smartarm
  </description>
  <author>Arizona Robotics Research Group, University of Arizona</author>
  <author>Arizona Robotics Research Group, University of Arizona</author>
  <maintainer email="rjw57@cam.ac.uk">Rich Wareham</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros</run_depend>
  <run_depend>ros_comm</run_depend>
  <run_depend>dynamixel_motor</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
