<package>
  <name>smart_arm_kinematics</name>
  <version>0.1.0</version>
  <description>
    smart_arm_kinematics
  </description>
  <author>Arizona Robotics Research Group, University of Arizona</author>
  <author>Antons Rebguns</author>
  <maintainer email="rjw57@cam.ac.uk">Rich Wareham</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>

