<package>
  <name>k2_client</name>
  <version>1.0.0</version>
  <description>
    Client for streaming Kinect 2.0 data to ROS
  </description>
  <author>Anurag Jakhotia</author>
  <maintainer email="tr346@cam.ac.uk">Tom Roddick</maintainer>
  <license>MIT</license>

  <url>http://ros.org/wiki/startKinect2</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
